fix(dashboard): left panel stretch full height

--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -120,7 +120,8 @@
   max-height: calc(100dvh - (var(--pad) * 2));
   
 
-  height: fit-content;min-height: 0;
+  height: 100%;
+  min-height: 0;
 
   display: flex;
   flex-direction: column;
@@ -401,8 +402,7 @@
 .dashMain,
 .dashCharts,
 .dashLeft{
-  align-self: start;
-  min-height: 0;
+    min-height: 0;
 }
 
 /* Acessibilidade */
@@ -612,4 +612,5 @@
     vertical-align: middle;
   }
 }
+
 
